@startuml AINE-DRL

!theme plain
skinparam backgroundColor #FFFFFF
scale 2
title AINE-DRL

Agent Environment [
    Environment
]

class Agent {
    - neural networks
    - policy
    - trajectory
    + select_action(state)
    + update(experiences)
    + train()
    + update_hyperparams(time_step)
}

class Policy {
    + get_policy_distribution(pdparam)
    + update_hyperparams(time_step)
}

class Trajectory {
    - states
    - actions
    - rewards
    - terminateds
    - next_state_buffer
    + add(experience)
    + sample()
    + can_train()
}

class DRLAlgorithm {
    + train()
}

Agent <|-- DRLAlgorithm
note left of DRLAlgorithm : Implements reinforcement learning algorithms

Agent::policy o-- Policy
Agent::trajectory o-- Trajectory

Environment <-- Agent::act : 1st << action >>
Environment --> Agent::update : 2nd << experience >>

@enduml